made some changes

--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -84,7 +84,7 @@
                     </div><!-- end info-icon-->
                     <div class="info-content">
                         <h4 class="info__title mb-2">Call Us Today</h4>
-                        <p class="info__desc"><a href="tel:+1811864592" class="btn-text">+1 (811) 86 45 92</a></p>
+                        <p class="info__desc"><a href="tel:+1811864592" class="btn-text">(+234) 08035862472</a></p>
                     </div><!-- end info-content -->
                 </div><!-- end info-box -->
             </div><!-- end col-lg-4 -->
