--- a/views/partials/footer.hbs
+++ b/views/partials/footer.hbs
@@ -15,7 +15,7 @@
                     </div><!-- end footer-logo -->
                     <ul class="list-items contact-links pt-3">
                         <li><span class="d-block text-color mb-1"><i class="la la-map mr-1 text-color-2"></i>Address:</span> Federal University of Technology Minna</li>
-                        <li><span class="d-block text-color mb-1"><i class="la la-phone mr-1 text-color-2"></i>Phone:</span><a href="#">+ 61 23 8093 3400</a></li>
+                        <li><span class="d-block text-color mb-1"><i class="la la-phone mr-1 text-color-2"></i>Phone:</span><a href="#">(+234) 08035862472</a></li>
                         <li><span class="d-block text-color mb-1"><i class="la la-envelope mr-1 text-color-2"></i>Email:</span><a href="#">DEWS@gmail.com</a></li>
                     </ul>
                 </div><!-- end footer-item -->
@@ -38,8 +38,8 @@
                     <h4 class="footer__title">Quick Actions</h4>
                     <div class="stroke-shape mb-3"></div>
                     <ul class="list-items">
-                        <li><a href="#" data-toggle="modal" data-target="#loginModal">Login</a></li>
-                        <li><a href="#" data-toggle="modal" data-target="#signUpModal">Sign Up</a></li>
+                        {{!-- <li><a href="#" data-toggle="modal" data-target="#loginModal">Login</a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#signUpModal">Sign Up</a></li> --}}
                         <li><a href="/map">Run Prediction</a></li>
                     </ul>
                 </div><!-- end footer-item -->
