--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -11,7 +11,7 @@
                             <option value="1" selected>English</option>
                         </select>
                     </div>
-                    <p class="login-and-signup-wrap">
+                    {{!-- <p class="login-and-signup-wrap">
                         <a href="#" data-toggle="modal" data-target="#loginModal">
                             <span class="mr-1 la la-sign-in"></span>Login
                         </a>
@@ -19,7 +19,7 @@
                         <a href="#" data-toggle="modal" data-target="#signUpModal">
                             <span class="mr-1 la la-user-plus"></span>Sign Up
                         </a>
-                    </p>
+                    </p> --}}
                 </div><!-- end col-lg-6 -->
                 <div class="col-lg-6 d-flex align-items-center justify-content-end header-top-info">
                     <span class="mr-2 text-white font-weight-semi-bold font-size-14">Follow DEWS on:</span>
