Made some changes

--- a/views/prediction.hbs
+++ b/views/prediction.hbs
@@ -87,7 +87,7 @@
                 lga: lga
             };
 
-            fetch("https://dewsapp.herokuapp.com/dews/pred/", {
+            fetch("https://dewsapp.onrender.com/api/v1/dews/predict", {
                 method: "POST", 
                 headers: {
                     'Content-Type': 'application/json',
