--- a/views/index.hbs
+++ b/views/index.hbs
@@ -60,7 +60,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <img src="/images/tetfund.png" class="img-fluid" />
+                {{!-- <img src="/images/tetfund.png" class="img-fluid" /> --}}
             </div>
             <div class="col-lg-12">
                 <div class="section-heading text-center">
