--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -41,7 +41,7 @@
                         <div class="logo">
                             <a href="/" style="display: inline-flex;">
                                 <h3 class="text-white">DEWS</h3>
-                                <img src="images/tetfund.png" alt="logo" class="img-fluid ml-2" width="120px" height="auto">
+                                {{!-- <img src="images/tetfund.png" alt="logo" class="img-fluid ml-2" width="120px" height="auto"> --}}
                             </a>
                             <div class="d-flex align-items-center">
                                 <div class="menu-toggle">
